--- a/04-populations.Rmd
+++ b/04-populations.Rmd
@@ -10,13 +10,13 @@ In this chapter we will use summation notation. If you are not familiar with sum
 
 Consider a scenario where we have the IQ data for three participants We use the N symbol to represent the number of participants. Because we have three participants N = 3. The data for these participants is illustrated in Figure \@ref(fig:notationdata).
 
-Notice how each person in the data set can be represent by the variable X. The first person by $X_1$, the second by $X_2$, and the third by $X_3$. Often we refer to individuals in a data set by using the variable X accompanied by a subscript (e.g., 1, 2, 3, etc.).
+Notice how each person in the data set can be represented by the variable X: the first person by $X_1$, the second by $X_2$, and the third by $X_3$. Often we refer to individuals in a data set by using the variable X accompanied by a subscript (e.g., 1, 2, 3, etc.).
 
 ```{r notationdata, echo = FALSE, out.width="35%", fig.cap = "Data for understanding summation notation"}
 knitr::include_graphics("ch_populations/images/screenshot_data_n6.png")
 ```
 
-Referring to participants using the variable X and subscript is valuable because it can be used in conjunction with the sigma (i.e., $\Sigma$) symbol for summation. Consider the example below in which we use the summation notation to indicate that we want to add all the X values (representing IQ) for the participants. We use a lower case $i$ to represent all possible subscript values. The notation below the $\Sigma$, $i$ = 1, indicates that we should start with participant 1. The notation below the $\Sigma$,  N, indicates that we should iterate $i$ up to the value indicated by N; in this case 3, because there are three participants.
+Referring to participants using the variable X and subscript is valuable because it can be used in conjunction with the sigma (i.e., $\Sigma$) symbol for summation. Consider the example below in which we use the summation notation to indicate that we want to add all the X values (representing IQ) for the participants. We use a lower case $i$ to represent all possible subscript values. The notation, $i$ = 1, below the $\Sigma$ symbol indicates that we should start with participant 1. The notation, N, above the $\Sigma$ symbol indicates that we should iterate $i$ up to the value indicated by N; in this case 3, because there are three participants.
 
 $$
 \begin{aligned} 
@@ -37,7 +37,7 @@ $$
 $$
 
 
-The full version of the notation can be used to indicate how a mean is calculated.
+**Calculating a mean**. The full version of the notation can be used to indicate how a mean is calculated.
 
 
 $$
@@ -62,7 +62,8 @@ $$
 \end{aligned} 
 $$
 
-A common task in statistics is to calculate 1) the squared distance between each person and the mean, and 2) add up those squared differences. This calculation is easily expressed with the full version of the notation.
+
+**Calculating squared differences**.A common task in statistics is to calculate 1) the squared difference between each person and the mean, and 2) add up those squared differences. This calculation is easily expressed with the full version of the notation.
 
 $$
 \begin{aligned} 
@@ -89,11 +90,11 @@ $$
 
 ## Population vs samples
 
-As we move closer to conducting our own research it is critical to make a distinction between populations and samples. A populations is the complete set of people/animals about which we want to make conclusions. Samples are a subset of the total number of people/animals in the population. In most scenarios it is impractical to work with an entire population and, for practical reasons, we study a subset of the population called a sample. 
+As we move closer to conducting our own research it is critical to make a distinction between populations and samples. A population is the complete set of people/animals about which we want to make conclusions. A samples is a subset of the total number of people/animals in the population. In most scenarios it is impractical to work with an entire population and, for practical reasons, we study a subset of the population called a sample. 
 
-Researchers, and consumers of research, typically have little interest in making conclusions at the sample level. In general, we care about conclusions that generalize to the population not conclusions that only apply to specific individuals in the sample. Consider the case of COVID-19. Imagine a team of researchers creates a vaccine that they hope creates immunity to COVID-19. We care very little if the immunity only works for the specific individuals in the study. However, we care a great deal with if the immunity works, or is likely to work, for all Canadians or all humans. Thus, we study samples but typically wish to make conclusions that apply to the population.
+Researchers, and consumers of research, typically have little interest in making conclusions at the sample level. In general, we care about conclusions that generalize to the population but not conclusions that only apply to specific individuals in the sample. Consider the case of COVID-19. Imagine a team of researchers creates a vaccine that they hope generates immunity to COVID-19. We care very little if the immunity only works for the specific individuals in the study. However, we care a great deal if the immunity works, or is likely to work, for all Canadians or all humans. Thus, we study samples but typically wish to make conclusions that apply to the population.
 
-Statistic tests are means of helping researchers use sample data to make conclusions at the population level. When we calculate numbers based on all of the people/animals in the population we refer to those numbers as **parameters**. We calculate numbers based on the people/animals in the sample we refer to those numbers as **statistics**. In general, statistics are used to estimate parameters. 
+Statistic tests are a means of helping researchers use sample data to make conclusions at the population level. When we calculate a number that summarises an attribute of all of the people/animals in the population we refer to it as a **parameter**. 
 
 ## A small population
 
@@ -101,7 +102,7 @@ Populations are typically quite large, but, for the purpose or reviewing how we 
 
 ### Mean
 
-It can be helpful to create a model of our data such that each observation represents a deviation from a model describing the entire set of observations. That is we can think of our three cookies using the approach:
+It can be helpful to create a model of our data such that each observation represents a deviation from a model describing the entire set of observations. That is we can think of our three cookies using the equation below. The weight of particular cookie is indicated by $X_i$. An estimate of that cookie's weight is indicated by "model". The difference between the model of the cookie's weight and actual cookie's weight is indicated by $error_i$.
 
 $$
 \begin{aligned} 
@@ -110,8 +111,7 @@ X_i &= model + error_i \\
 $$
 
 
-
-We can create a model for our data using many different approaches. A simple model for our data is the mean:
+We can create a model for our data using many different approaches. A simple model for our data is the mean, $\bar{X}$:
 
 $$
 \begin{aligned} 
@@ -124,7 +124,7 @@ $$
 $$
 
 
-Then we can think of this "mean cookie" our model as:
+Then we can think of this "mean cookie" our model:
 
 $$
 \begin{aligned} 
